meego-keyboard (0.4.10~1) unstable; urgency=low

  * Implemented: SWP#TINME-803 - Symbol view uses different layout for
    hardware keyboard
  * Fixes: NB#167172 - Enter key is missing from virtual keypad

 -- Ning Chi <ext-chi.ning@nokia.com>  Tue, 20 Jul 2010 16:55:34 +0300

meego-keyboard (0.4.9-2) unstable; urgency=low

  * Fixed mistake in changelog

 -- Viacheslav Sobolev <ext-viacheslav.sobolev@nokia.com>  Fri, 16 Jul 2010 09:42:44 +0300

meego-keyboard (0.4.9-1) unstable; urgency=low

  * Fixes: NB#161203, Copy option is not present in VKB when symbols are
    shown in VKB in portrait mode
  * Implemented SWP#TINME-466, SWP#TINME-932, SWP#TINME-940, SWP#TINME-928,
    SWP#TINME-985, SWP#TINME-959
  * Fixes: NB#178033, Bottom toolbar is displayed as in portrait mode even if
    DUT is in horizontal mode
  * Fixes: NB#171793, Autocaps gets removed when Keyboard settings screen
    comes up
  * Fixes: NB#168023, VKB doesn't keep Auto-Capitalization mode after
    rotating to portrait mode
  * Fixes: NB#178707, VKB crashes on changing display language

 -- Viacheslav Sobolev <ext-viacheslav.sobolev@nokia.com>  Thu, 15 Jul 2010 15:55:38 +0300

meego-keyboard (0.4.8-2) unstable; urgency=low

  * Hide the opened settings dialog when its parent item is hidden

 -- Ning Chi <ext-chi.ning@nokia.com>  Sat, 03 Jul 2010 15:39:20 +0300

meego-keyboard (0.4.8-1) unstable; urgency=low

  * Reduced the number of selected default languages
  * Popup to appear immediately when button is pressed
  * Fixed copy/paste button styling
  * Layouts to use endonyms for language names

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Fri, 02 Jul 2010 12:34:40 +0300

meego-keyboard (0.4.7-1) unstable; urgency=low

  * Fixed vkb crashing when en_gb is not selected to be used
  * Better implementation for relocation workaround

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Thu, 01 Jul 2010 10:15:00 +0300

meego-keyboard (0.4.6-1) unstable; urgency=low
