@@ -47,7 +47,7 @@
           </row>
           <row>
             <key>
-              <binding label="⇥"/>
+              <binding label="⇥" action="tab"/>
             </key>
             <key>
               <binding label="*"/>
@@ -78,7 +78,7 @@
               <binding shift="true" label="]"/>
             </key>
             <key>
-              <binding label="↵"/>
+              <binding label="↵" action="return"/>
             </key>
           </row>
           <row>
