@@ -37,7 +37,7 @@
           </row>
           <row>
             <key>
-              <binding label="⇥"/>
+              <binding label="⇥" action="tab"/>
             </key>
             <key>
               <binding label="*"/>
@@ -72,7 +72,7 @@
               <binding shift="true" label="]"/>
             </key>
             <key>
-              <binding label="↵"/>
+              <binding label="↵" action="return"/>
             </key>
           </row>
           <row>
