@@ -37,7 +37,7 @@
           </row>
           <row>
             <key>
-              <binding label="&#x21E5;"/>
+              <binding label="&#x21E5;" action="tab"/>
             </key>
             <key>
               <binding label="*"/>
@@ -72,7 +72,7 @@
               <binding shift="true" label="]"/>
             </key>
             <key>
-              <binding label="&#x21B5;"/>
+              <binding label="&#x21B5;" action="return"/>
             </key>
           </row>
           <row>
